RESOLVED FIXED 245922
[LFC][IFC][Floats] Incorrect content placement when the line is tall enough to accommodate multiple floats with clear
https://bugs.webkit.org/show_bug.cgi?id=245922
Summary [LFC][IFC][Floats] Incorrect content placement when the line is tall enough t...
alan
Reported 2022-09-30 20:45:36 PDT
ssia
Attachments
Patch (5.15 KB, patch)
2022-09-30 21:06 PDT, alan
no flags
Patch (5.22 KB, patch)
2022-09-30 21:49 PDT, alan
ews-feeder: commit-queue-
Patch (6.56 KB, patch)
2022-10-01 08:19 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2022-09-30 21:06:20 PDT
alan
Comment 2 2022-09-30 21:49:19 PDT
alan
Comment 3 2022-10-01 08:19:18 PDT
EWS
Comment 4 2022-10-01 15:57:16 PDT
Committed 255066@main (d0364ca69725): <https://commits.webkit.org/255066@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462748 [details].
Radar WebKit Bug Importer
Comment 5 2022-10-01 15:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.