[LFC][IFC][Floats] Incorrect content placement when the line is tall enough to accommodate multiple floats with clear https://bugs.webkit.org/show_bug.cgi?id=245922

Reviewed by Antti Koivisto.

When there's enough vertical space to stack multiple float boxes under each other (with clear) within the line, the line gets sized (shrunk) incorrectly.

* LayoutTests/fast/inline/tall-line-with-multiple-floats-expected.html: Added.
* LayoutTests/fast/inline/tall-line-with-multiple-floats.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::inlineItemWidth const):
(WebCore::Layout::LineBuilder::tryPlacingFloatBox): Handle the case when the float boxes are not horizontally stacked.

Canonical link: https://commits.webkit.org/255066@main