Source/WebCore/layout/formattingContexts/inline/InlineRect.h
@@ -61,6 +61,8 @@ public:
     void moveVertically(InlineLayoutUnit);
     void moveBy(InlineLayoutPoint);
 
+    void shiftLeftTo(InlineLayoutUnit);
+
     void expand(std::optional<InlineLayoutUnit>, std::optional<InlineLayoutUnit>);
     void expandToContain(const InlineRect&);
     void expandHorizontally(InlineLayoutUnit delta) { expand(delta, { }); }
@@ -265,6 +267,12 @@ inline void InlineRect::moveBy(InlineLayoutPoint offset)
     ASSERT(m_hasValidTop);
     ASSERT(m_hasValidLeft);
     m_rect.moveBy(offset);
+}
+
+inline void InlineRect::shiftLeftTo(InlineLayoutUnit left)
+{
+    ASSERT(m_hasValidLeft);
+    m_rect.shiftXEdgeTo(left);
 }
 
 inline void InlineRect::expand(std::optional<InlineLayoutUnit> width, std::optional<InlineLayoutUnit> height)
